2010-01-25  Piotr Fusik  <fox@scene.pl>
* asapconv.c: options to set AUTHOR, NAME and DATE when converting to SAP
  or editing SAP

* asap.h, xbmc/xbmc_asap.c, win32/info_dlg.c, win32/foobar2000/foo_asap.cpp:
  created ASAP_INFO_CHARS


2010-01-24  Piotr Fusik  <fox@scene.pl>
* asap2wav.c, asapconv.c, Makefile, INSTALL, README, PORTS.xml, win32/Makefile,
  win32/USAGE, win32/setup/asap.wxs: replaced asap2wav with asapconv,
  which can also convert native modules to and from the SAP format


2010-01-19  Piotr Fusik  <fox@scene.pl>
* README, INSTALL: switched from CVS to Git


2010-01-18  Piotr Fusik  <fox@scene.pl>
* win32/foobar2000/foo_asap.cpp: removed masks from file type descriptions


2010-01-17  Piotr Fusik  <fox@scene.pl>
* asap.c: reuse string constants

* asap.c: use parse_cmc() for all CMC clones

* win32/settings_dlg.c, win32/settings_dlg.h, win32/foobar2000/foo_asap.cpp:
  same code for returning song duration and setting duration for song playback

* win32/foobar2000/foo_asap.cpp, win32/gui.rc, win32/settings_dlg.c,
  win32/settings_dlg.h, win32/Makefile, README, PORTS.xml,
  win32/setup/asap.wxs: upgraded to foobar2000 1.0

* win32/gui.rc: included ASAP version and changed quote escaping
  in WASAP XML manifest


2010-01-15  Piotr Fusik  <fox@scene.pl>
* win32/gui.h, gsplayer/Makefile, gsplayer/gspasap.c, win32/Makefile,
  win32/gui.rc, win32/info_dlg.c, win32/info_dlg.h, win32/settings_dlg.c,
  win32/settings_dlg.h, win32/apollo/ASAP_Apollo.cpp,
  win32/foobar2000/foo_asap.cpp, win32/wasap/wasap.c, win32/wasap/wasap.h,
  win32/winamp/in_asap.c:
  split gui.h into info_dlg.h, settings_dlg.h and wasap.h

* win32/gui.c, win32/info_dlg.c, win32/settings_dlg.c, win32/Makefile,
  gsplayer/Makefile: split gui.c into info_dlg.c and settings_dlg.c

* win32/Makefile, INSTALL: updated foobar2000 SDK to 1.0


2010-01-14  Piotr Fusik  <fox@scene.pl>
* asap.c, chksap.pl: allow TYPE D SAPs with no PLAYER


2010-01-13  Piotr Fusik  <fox@scene.pl>